fixed map getting covered

--- a/src/styles/layout/_layout.sections.scss
+++ b/src/styles/layout/_layout.sections.scss
@@ -9,7 +9,7 @@ $orbital-outline :  var(--ms-size_4);
 }
 
 .S-areas {
-  overflow: hidden;
+  //overflow: visible;
   align-items: start;
 
   @media (min-width: 768px) {
